syntax = "proto3";

package auth;

option go_package = "kavshevnova.auth.v1;authv1";

service AuthService {
  //Регистрация пользователя и вход
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 2;
}
